[package]
name = "gdv-parser"
version = "0.1.0"
authors = ["Alexander Ratajczak <a4blue@hotmail.de>"]
edition = "2018"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
encoding = "0.2"
chardetng = "0.1.10"
gdv_parser_struct = {path = "gdv_parser_struct"}